--- a/public_html/index.html
+++ b/public_html/index.html
@@ -485,7 +485,7 @@
                                 <i class="ti-map-alt icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Address :<br> <span class="text-muted">TUMKUR KAENATAKA.</span></h6>
+                                <h6 class="d-inline">Address :<br> <span class="text-muted">TUMKUR KARNATAKA.</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -527,7 +527,7 @@
     <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
     
     <!-- Google mpas -->
-    <script async defer src="https://maps.app.goo.gl/kBPHxvJrLGvVrx9U7?g_st=iw"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script>
 
     <!-- dakshith s -->
     <script src="assets/js/johndoe.js"></script>
