--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					while making a significant
 					contribution to the success of the company.</p>
               <ul class="theme-list">
-                <li class="fg-dark"><b>From:</b> Tumkur, karnataka</li>
+                <li class="fg-dark"><b>From:</b> ChikkanayakanaHalli Tumkur, karnataka 572214</li>
                 <li class="fg-dark"><b>Lives In:</b> Tumkur, karnataka</li>
                 <li class="fg-dark"><b>Age:</b> 19</li>
                 <li class="fg-dark"><b>Gender:</b> Male</li>
@@ -200,19 +200,19 @@
                 </div>
               </li>
               <li>
-                <div class="title">2018 - 2019</div>
+                <div class="title">2020 - 2021</div>
                 <div class="details">
                   <h5>PUC</h5>
                   <small class="fg-theme">DEPARTMENT OF PRE-UNIVERSITY EDUCATION</small>
-                  <p>College - Government Pu college.<br> Stream - PCMC</p>
+                  <p>College - Government Pu college.<br> Stream - PCMB</p>
                 </div>
               </li>
               <li>
-                <div class="title">2019 - 2021</div>
+                <div class="title">2018 - 2019</div>
                 <div class="details">
                   <h5>SSLC</h5>
                   <small class="fg-theme">KARNATAKA STATE SECONDARY EDUCATION EXAMINATION BOARD (KSEEB)</small>
-                  <p>School - Government Junior Pu college [High school section].</p>
+                  <p>School - Government High school section.</p>
                 </div>
               </li>
             </ul>
@@ -337,7 +337,7 @@
   
   <script src="assets/js/minibar-virtual.js"></script>
 
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
+  <script async defer src="https://goo.gl/maps/Ye9R2hHWEiWny3Qe8"></script>
 
 </body>
 </html>
