--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li class="social-item"><a class="social-link text-light" href="https://twitter.com/dakshith_s"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://instagram.com/thenameisdakshith?igshid=YmMyMTA2M2Y="><i class="ti-instagram" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://github.com/dakshiths"><i class="ti-github" aria-hidden="true"></i></a></li>
+				<li class="social-item"><a class="social-link text-light" href="http://linkedin.com/in/dakshith-s-55478b238"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
             </ul>  
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
@@ -80,8 +81,8 @@
                 <ul class="mt40 info list-unstyled">
                     <li><span>Birthdate</span> : 05/06/2003</li>
                     <li><span>Email</span> : dakshithnaduve@gmail.com</li>
-                    <li><span>Phone</span> : + (91) 0000000</li>
-                    <li><span>Address</span> : Tumkur.</li>
+                    <li><span>Phone</span> : +91 7204587002</li>
+                    <li><span>Address</span> : Tumkur Karnataka.</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="https://www.facebook.com/dakshith.naduve"><i class="ti-facebook" aria-hidden="true"></i></a></li>
@@ -476,7 +477,7 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+ (91) 0000000</span></h6>
+                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+91 7204587002</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -500,6 +501,7 @@
                             <li class="social-item"><a class="social-link text-dark" href="https://twitter.com/dakshith_s"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="https://instagram.com/thenameisdakshith?igshid=YmMyMTA2M2Y="><i class="ti-instagram" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="https://github.com/dakshiths"><i class="ti-github" aria-hidden="true"></i></a></li>
+							<li class="social-item"><a class="social-link text-dark" href="http://linkedin.com/in/dakshith-s-55478b238"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                         </ul> 
                     </div>
                 </div>
