new photos changes

--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp">
             <div class="card card-body">
               <div class="iconic">
-                <span class="ti-camera"></span>
+                <span class="ti-desktop"></span>
               </div>
-              <h4 class="fg-theme">OpenCV</h4>
-              <p>Face recognition system for taking attendance.</p>
-              <a href="https://github.com/dakshiths/Face-Recognition-Attendance-System.git" class="btn btn-theme btn-rounded">Github</a>
+              <h4 class="fg-theme">Website</h4>
+              <p>Dopetrope Website</p>
+              <a href="https://github.com/dakshiths/Dopetrope.git" class="btn btn-theme btn-rounded">GitHub</a>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 wow fadeInUp">
@@ -257,9 +257,9 @@
               <div class="iconic">
                 <span class="ti-anchor"></span>
               </div>
-              <h4 class="fg-theme">Website</h4>
-              <p>Dopetrope Website</p>
-              <a href="https://github.com/dakshiths/Dopetrope.git" class="btn btn-theme btn-rounded">GitHub</a>
+              <h4 class="fg-theme">Docker</h4>
+              <p>Application containerization</p>
+              <a href="https://hub.docker.com/repository/docker/dakshiths/dakshith.s-1sv21is004" class="btn btn-theme btn-rounded">Docker</a>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 wow fadeInUp">
@@ -278,20 +278,20 @@
     <!-- Portfolio Section -->
     <section class="section bg-custom-gray" id="portfolio">
         <div class="container">
-            <h1 class="mb-5"><span class="text-danger">My</span> Portfolio</h1>
+            <center><h1 class="mb-5"><span class="text-danger"></span>Internship Images</h1></center>
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".new" class="active">
-                        New
+                        All
                     </a>
                     <a href="#" data-filter=".advertising">
-                        Advertising
+                        Dockerhub
                     </a>
                     <a href="#" data-filter=".branding">
-                        Branding
+                        Python
                     </a>
                     <a href="#" data-filter=".web">
-                        Web
+                        Data Science
                     </a>
                 </div>
                 <div class="portfolio-container"> 
@@ -330,9 +330,9 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 web">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/web-4.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-4.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/web-4.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
                                 </div>
@@ -353,9 +353,9 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
+                            <img src="assets/imgs/web-3.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/web-3.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
                                 </div>
@@ -409,9 +409,9 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 branding new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
+                            <img src="assets/imgs/branding-3.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/branding-3.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">BRANDING</h6>
                                 </div>
