--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
+                                    <h6 class="title">Data Science</h6>
                                 </div>
                             </div>   
                         </div>             
@@ -312,7 +312,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-2.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
+                                    <h6 class="title">Data Science</h6>
                                 </div>
                             </div> 
                         </div>                         
@@ -323,7 +323,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-2.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERSTISING</h6>
+                                    <h6 class="title">Innovation Day</h6>
                                 </div>
                             </div>    
                         </div>              
@@ -334,7 +334,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-4.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
+                                    <h6 class="title">Data Science</h6>
                                 </div>
                             </div>
                         </div>                                                     
@@ -346,7 +346,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-1.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERSITING</h6>
+                                    <h6 class="title">Dockerhub</h6>
                                 </div>
                             </div>
                         </div>                                                       
@@ -357,7 +357,7 @@
                            <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-3.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
+                                    <h6 class="title">Data Science</h6>
                                 </div>
                             </div>
                         </div>                                                     
@@ -368,7 +368,7 @@
                            <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-3.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERSITING</h6>
+                                    <h6 class="title">Dockerhub</h6>
                                 </div>
                             </div>
                         </div>                                                       
@@ -379,7 +379,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-4.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERTISING</h6>
+                                    <h6 class="title">Dockerhub</h6>
                                 </div>
                             </div>
                         </div>
@@ -391,7 +391,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-1.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
+                                    <h6 class="title">Python</h6>
                                 </div>
                             </div> 
                         </div>
@@ -402,7 +402,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-2.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
+                                    <h6 class="title">Python</h6>
                                 </div>
                             </div>
                         </div>                                                     
@@ -413,33 +413,11 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-3.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
+                                    <h6 class="title">Python</h6>
                                 </div>
                             </div>
                         </div>                                                    
-                    </div> 
-                    <div class="col-md-6 col-lg-4 branding">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/branding-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                </div>
-                            </div>
-                        </div>                                                      
-                    </div> 
-                    <div class="col-md-6 col-lg-4 branding">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/branding-5.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-5.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                </div>
-                            </div>
-                        </div>                                                   
-                    </div>
+                    </div>                     
                 </div> 
             </div>  
         </div>            
