--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="card">
                        <div class="card-header">
                             <div class="mt-2">
-                                <h4>Education</h4>
+                                <h4>About</h4>
                                 <span class="line"></span>  
                             </div>
                         </div>
@@ -267,9 +267,9 @@
               <div class="iconic">
                 <span class="ti-desktop"></span>
               </div>
-              <h4 class="fg-theme">Flask Web Framework</h4>
-              <p>yaml to json to xml converter</p>
-              <a href="https://github.com/dakshiths/yaml-to-json-to-xml-converter.git" class="btn btn-theme btn-rounded">GitHub</a>
+              <h4 class="fg-theme">Credit Card Approval Predictionk</h4>
+              <p>Credit Card Approval Predictionk using ml</p>
+              <a href="https://github.com/dakshiths/credit-card-approval-prediction" class="btn btn-theme btn-rounded">GitHub</a>
             </div>
           </div>
         </div>
