--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <span class="ti-anchor"></span>
               </div>
               <h4 class="fg-theme">Docker</h4>
-              <p>Application containerization</p>
+              <p>Docker Image</p>
               <a href="https://hub.docker.com/repository/docker/dakshiths/dakshith.s-1sv21is004" class="btn btn-theme btn-rounded">Docker</a>
             </div>
           </div>
