--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
                     <li><span>Birthdate</span> : 05/06/2003</li>
-                    <li><span>Email</span> : dakshithnaduve@gmail.com</li>
-                    <li><span>Phone</span> : +91 7204587002</li>
+                    <li><span>Email</span> : example@gmail.com</li>
+                    <li><span>Phone</span> : +91 0000000000</li>
                     <li><span>Address</span> : Tumkur Karnataka.</li>
                 </ul>
                 <ul class="social-icons pt-3">
@@ -455,7 +455,7 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+91 7204587002</span></h6>
+                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+91 0000000000</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -471,7 +471,7 @@
                                 <i class="ti-envelope icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Email :<br> <span class="text-muted">dakshithnaduve.com</span></h6>
+                                <h6 class="d-inline">Email :<br> <span class="text-muted">example@gmail.com</span></h6>
                             </div>
                         </div>
                         <ul class="social-icons pt-4">
