--- a/index.html
+++ b/index.html
@@ -262,6 +262,15 @@
               <a href="https://hub.docker.com/repository/docker/dakshiths/dakshith.s-1sv21is004" class="btn btn-theme btn-rounded">Docker</a>
             </div>
           </div>
+		<div class="col-md-6 col-lg-4 wow fadeInUp">
+            <div class="card card-body">
+              <div class="iconic">
+                <span class="ti-desktop"></span>
+              </div>
+              <h4 class="fg-theme">Presentation</h4>
+              <p>Computer organization</p>
+              <a<button onclick="location.href='presentation.pdf'" class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>open pptx</button></a>
+            </div>
           <div class="col-md-6 col-lg-4 wow fadeInUp">
             <div class="card card-body">
               <div class="iconic">
