--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               </div>
               <h4 class="fg-theme">Presentation</h4>
               <p>Computer organization</p>
-              <a<button onclick="location.href='presentation.pdf'" class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>open pptx</button></a>
+              <a<button onclick="location.href='presentation.pptx'" class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>open pptx</button></a>
             </div>
         </div>
       </div>
